--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,8 +2,6 @@ name: Build Kahfi APK
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main, master ]
 
 jobs:
   build:
@@ -17,7 +15,7 @@ jobs:
         with:
           channel: stable
 
-      - name: Create Flutter Project (if needed)
+      - name: Create Flutter Project if Needed
         run: |
           if [ ! -d "android" ]; then
             flutter create .
@@ -34,3 +32,4 @@ jobs:
         with:
           name: Kahfi-APK
           path: build/app/outputs/flutter-apk/app-release.apk
+
